# playground_nng

./: .gitmodules  README.md
idl/: CMakeLists.txt
nngpp/: .gitignore  CMakeLists.txt
nngpp/pubsub_multiple_topics/: CMakeLists.txt
nngpp/pubsub_multiple_topics/publisher/: CMakeLists.txt  publisher.cc
nngpp/pubsub_multiple_topics/subscriber/: CMakeLists.txt  subscriber.cc
nngpp/pubsub_time/: CMakeLists.txt
nngpp/pubsub_time/publisher/: CMakeLists.txt  publisher.cc
nngpp/pubsub_time/subscriber/: CMakeLists.txt  subscriber.cc
nngpp/pubsub_time_tls/publisher/: CMakeLists.txt  publisher.cc
nngpp/pubsub_time_tls/subscriber/: CMakeLists.txt  subscriber.cc
nngpp/reqrep_time/requester/: CMakeLists.txt  requester.cc
nngpp/reqrep_time/responder/: CMakeLists.txt  responder.cc
nngpp/reqrep_time_protobuf/: CMakeLists.txt
nngpp/reqrep_time_protobuf/requester/: CMakeLists.txt  requester.cc
nngpp/reqrep_time_protobuf/responder/: CMakeLists.txt  responder.cc
nngpp/utils/: CMakeLists.txt  time.cc  time.h
pynng/: requirements.txt
pynng/pubsub/: publisher.py  publisher1.py  publisher2.py  subscriber.py  test_image_generator.py
pynng/pubsub_image/: publisher.py  subscriber.py  test_image_generator.py
pynng/pubsub_multiple_topics/: publisher.py  subscriber.py
pynng/pubsub_time/: publisher.py  subscriber.py
pynng/pubsub_time_asyncio/: http_endpoint.py  publisher.py  subscriber.py
pynng/pubsub_time_tls/: certs  publisher.py  subscriber.py
pynng/reqrep_time/: requester.py  responder.py
pynng/reqrep_time_protobuf/: build_protobuf.sh  idl  requester.py  responder.py  time_pb2.py
resources/certs/: ca.crt  key_pair_file.pem
resources/idl/: time.proto
scripts/: install_dependencies_debian_ubuntu.sh
